--- a/product2_2.html
+++ b/product2_2.html
@@ -46,7 +46,7 @@
           <div class="col-md-6 col-12">
             <h2>六角軸修邊刀頭</h2>
             <p>適用銅管尺寸2~5分</p>
-            <p>相當於1~16mm</p>
+            <p>也適用於1~16mm</p>
             <p>刀頭外層鍍鈦,不易生鏽</p>
             <p>此修邊刀頭運用於電動鑽頭</p>
           </div>
