--- a/product2.html
+++ b/product2.html
@@ -49,7 +49,7 @@
               <div class="img-big"><img class="img-fluid" src="public/images/pd2-2.png" alt=""/></div>
               <h3>六角軸修邊刀頭</h3></a></div>
           <div class="col-md-6 col-12"> <a href="product2_3.html"> 
-              <div class="img-big"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+              <div class="img-big"><img class="img-fluid" src="public/images/pd2-3.png" alt=""/></div>
               <h3>大力活動扳手</h3></a></div>
           <div class="col-md-6 col-12"> <a href="product2_4.html"> 
               <div class="img-big"><img class="img-fluid" src="public/images/pd2-4.png" alt=""/></div>
