--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <li> 
           <div class="date">2022-11-01</div>
           <div class="product1">產品資訊</div>
-          <div class="news">裝修最強助手-大力活動扳手即將推出,各位師傅們不要錯過喔!</div>
+          <div class="news"> <a href="product2_3.html">裝修最強助手-大力活動扳手即將推出,各位師傅們不要錯過喔!</a></div>
         </li>
         <li> 
           <div class="date">2022-11-01</div>
           <div class="product1">產品資訊</div>
-          <div class="news">螺絲小幫手-真豪吸上市囉!</div>
+          <div class="news"> <a href="product2_4.html">螺絲小幫手-真豪吸上市囉!</a></div>
         </li>
         <li> 
           <div class="date">2022-11-01</div>
@@ -54,7 +54,7 @@
     <div class="container row">
       <div class="left col-12"><img class="img-fluid" src="public/images/product6.png" alt=""/></div>
       <div class="right col-12">
-        <h2>真豪洗冷氣清洗槽</h2>
+        <h2> <a href="product1_1.html">真豪洗冷氣清洗槽</a></h2>
         <p>革命性產品</p>
         <p>完全解決溢水的困擾</p>
         <p>組裝快速省去繁雜工時</p>
@@ -65,7 +65,7 @@
     <div class="container row"> 
       <div class="left col-12"><img class="img-fluid" src="public/images/knife2.png" alt=""/><img class="logo2-2" src="public/images/LOGO2.png" alt=""/></div>
       <div class="right col-12 order-md-1">
-        <h2>真豪修邊刀</h2>
+        <h2> <a href="product2_1.html">真豪修邊刀</a></h2>
         <p>方便攜帶</p>
         <p>好操作</p>
         <p>耐用</p>
